master code : complete testing function all is working

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@
 LLM_PROVIDER=ollama
 
 # LLM Model
-# For Ollama: mistral, llama2, codellama, gpt-oss-20b, etc.
+# For Ollama: mistral, llama2, codellama, gpt-oss-20b, llama3.1:8b, etc.
 # For Z.AI: glm-4.6, etc.
-LLM_MODEL=gpt-oss-20b
+LLM_MODEL=llama3.1:8b
 
 # Temperature (0.0 - 1.0)
 # Lower = more deterministic, Higher = more creative
