update : add persona and docker

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
+# =============================================================================
 # LLM Provider Configuration
+# =============================================================================
 # Choose between "ollama" or "zai"
 LLM_PROVIDER=ollama
 
@@ -11,16 +13,19 @@ LLM_MODEL=llama3.1:8b
 # Lower = more deterministic, Higher = more creative
 LLM_TEMPERATURE=0.2
 
-# ============================================================================
+# =============================================================================
 # Ollama Configuration (if LLM_PROVIDER=ollama)
-# ============================================================================
+# =============================================================================
 
 # Ollama base URL
+# Local development: http://localhost:11434
+# Docker Compose: http://ollama:11434
+# Remote server: http://your-ollama-server:11434
 OLLAMA_URL=http://localhost:11434
 
-# ============================================================================
+# =============================================================================
 # Z.AI Configuration (if LLM_PROVIDER=zai)
-# ============================================================================
+# =============================================================================
 
 # Z.AI API Key (required for Z.AI)
 # Get your API key from https://z.ai
@@ -32,9 +37,19 @@ ZAI_API_KEY=
 # - https://api.z.ai/api/paas/v4 (general endpoint)
 ZAI_BASE_URL=https://api.z.ai/api/coding/paas/v4
 
-# ============================================================================
+# =============================================================================
+# Application Configuration
+# =============================================================================
+
+# CORS allowed origins (comma-separated for frontend access)
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Max orchestration steps per request
+MAX_ORCHESTRATION_STEPS=10
+
+# =============================================================================
 # Example Configurations
-# ============================================================================
+# =============================================================================
 
 # Example 1: Using Ollama with Mistral
 # LLM_PROVIDER=ollama
